syntax = "proto3";

package project;

service ProjectService {
    rpc getProject (ProjectRequest) returns (ProjectResponse);
    rpc create (CreateProjectRequest) returns (ProjectResponse);
}

message ProjectRequest{
    int32 projectId=1;

}

message ProjectResponse{
    int32 projectId=1;
    string name= 2;
    string description=3;
    
}
message CreateProjectRequest{
 
    string name= 1;
    string description=2;
    
}